Add JHU page and home items
- modify home page, add JHU info, add patents, etc.
- add JHU projects page

--- a/portfolioEE.html
+++ b/portfolioEE.html
@@ -13,12 +13,13 @@
 				
 			<ul id="navigator">
 				<li class="naviItems"><a href="portfolioHome.html">Home</a></li>
-				<li class="naviItems"><a id="nowItem" href="portfolioEE.html">Digital Signal &amp; Image Processing Projects</a></li>
-				<li class="naviItems"><a href="portfolioOther.html">Other Projects</a></li>
+				<li class="naviItems"><a href="portfolioJHU.html">JHU Projects</a></li>
+				<li class="naviItems"><a id="nowItem" href="portfolioEE.html">UW DSP Projects</a></li>
+				<li class="naviItems"><a href="portfolioOther.html">UW Other Projects</a></li>
 			</ul>
 			
 			<div id="introBlock">
-				<h2>Digital Signal &amp; Image Processing Projects</h2>
+				<h2>UW Digital Signal &amp; Image Processing Projects</h2>
 				
 				<p class="subtitle">Advanced Driver Assistance Systems Image Analysis :</p>
 				<p><span>Associated Course:</span> Electrical Engineering Entrepreneurial Capstone</p>
