--- a/portfolioHome.html
+++ b/portfolioHome.html
@@ -13,8 +13,9 @@
 				
 			<ul id="navigator">
 				<li class="naviItems"><a id="nowItem" href="portfolioHome.html">Home</a></li>
-				<li class="naviItems"><a href="portfolioEE.html">Digital Signal &amp; Image Processing Projects</a></li>
-				<li class="naviItems"><a href="portfolioOther.html">Other Projects</a></li>
+				<li class="naviItems"><a href="portfolioJHU.html">JHU Projects</a></li>
+				<li class="naviItems"><a href="portfolioEE.html">UW DSP Projects</a></li>
+				<li class="naviItems"><a href="portfolioOther.html">UW Other Projects</a></li>
 			</ul>
 			
 			<div id="introBlock">
@@ -22,10 +23,23 @@
 				<img id="photo" src="photo.jpg" alt="Yi-Ting"/>
 				<p class="subtitle">About Me:</p>
 				<p class="intro"><span>Name:</span> Yi-Ting Tsai</p>
-				<p class="intro"><span>School:</span> University of Washington, Class of 2018</p>
+				<p class="intro"><span>Languages:</span> English, Mandarin</p>
+				<br>
+				<p class="subtitle">Graduate School:</p>
+				<p class="intro"><span>Master's degree:</span> The Johns Hopkins University, gradudated in Dec. 2022</p>
+				<p class="intro"><span>Major:</span> Electrical and Computer Engineering</p>
+				<p class="intro"><span>Concentration Area:</span> <a href="https://www.clsp.jhu.edu/human-language-technology-masters/" target="_blank">Human Language Technology</a></p>
+				<br>
+				<p class="subtitle">Undergraduate:</p>
+				<p class="intro"><span>Bachelor's degree:</span> University of Washington, Class of 2018</p>
 				<p class="intro"><span>Major:</span> Electrical Engineering (Minor: Philosophy)</p>
 				<p class="intro"><span>Concentration Area:</span> Digital Signal and Image Processing</p>
-				<p class="intro"><span>Languages:</span> English, Mandarin</p>
+				<br>
+				<p class="subtitle">Patents and Submissions:</p>
+				<p class="intro"><span>Patents:</span> Wind noise suppression method applicable to artificial cochlea, and system thereof (CN111261182B), Gain adjustment method suitable for cochlear implant (CN111479204B)</p>
+				<p class="intro"><span>Presentation:</span> Ong, T., <b>Tsai, Y.</b>, &amp; Nie, K. (2019). A real-time noise reduction algorithm by estimating speech gap for cochlear implant. Poster presented at the Conference on Implantable Auditory Prostheses, Lake Tahoe, CA</p>
+				<p class="intro"><span>Paper to submit:</span> Favaro, A., <b>Tsai, Y.</b> (2023) Are Interpretable Features More Suitable than Non-interpretable Features for the Automatic Detection of Parkinson’s Disease from Speech in Cross-lingual Scenarios?</p>
+				<br>
 				<p class="subtitle">Contact:</p>
 				<p class="intro"><span>Email:</span> tsaiy4@uw.edu</p>
 				<p class="intro"><a href="https://www.linkedin.com/in/yi-ting-tsai" target="_blank">LinkedIn Profile</a></p>
@@ -36,7 +50,7 @@
 			
 			<div id="pusher"></div> 
 		</div> 
-		<div id="footer"><p id="copyright">by Yi-Ting Tsai, 2018</p></div>
+		<div id="footer"><p id="copyright">by Yi-Ting Tsai, 2023</p></div>
 	</body>
 
 </html>
