--- a/portfolioOther.html
+++ b/portfolioOther.html
@@ -13,12 +13,13 @@
 				
 			<ul id="navigator">
 				<li class="naviItems"><a href="portfolioHome.html">Home</a></li>
-				<li class="naviItems"><a href="portfolioEE.html">Digital Signal &amp; Image Processing Projects</a></li>
-				<li class="naviItems"><a id="nowItem" href="portfolioOther.html">Other Projects</a></li>
+				<li class="naviItems"><a href="portfolioJHU.html">JHU Projects</a></li>
+				<li class="naviItems"><a href="portfolioEE.html">UW DSP Projects</a></li>
+				<li class="naviItems"><a id="nowItem" href="portfolioOther.html">UW Other Projects</a></li>
 			</ul>
 			
 			<div id="introBlock">
-				<h2>Other Projects</h2>
+				<h2>UW Other Projects</h2>
 				
 				<p class="subtitle">64-bit ARM Pipelined CPU:</p>
 				<p><span>Associated Course:</span> Computer Architecture</p>
