--- a/portfolioHome.html
+++ b/portfolioHome.html
@@ -24,25 +24,28 @@
 				<p class="subtitle">About Me:</p>
 				<p class="intro"><span>Name:</span> Yi-Ting Tsai</p>
 				<p class="intro"><span>Languages:</span> English, Mandarin</p>
+				<p class="intro"><span>Email:</span> ytsai25@jhu.edu</p>
+				<p class="intro"><a href="https://www.linkedin.com/in/yi-ting-tsai" target="_blank">LinkedIn Profile</a></p>
 				<br>
 				<p class="subtitle">Graduate School:</p>
 				<p class="intro"><span>Master's degree:</span> The Johns Hopkins University, gradudated in Dec. 2022</p>
 				<p class="intro"><span>Major:</span> Electrical and Computer Engineering</p>
 				<p class="intro"><span>Concentration Area:</span> <a href="https://www.clsp.jhu.edu/human-language-technology-masters/" target="_blank">Human Language Technology</a></p>
+				<p class="intro"><span>Research Project:</span> A Cross-lingual Evaluation of the Automatic Detection of Parkinson’s Disease
+					from Speech using X-Vectors and TRILLsson Representations</p>
 				<br>
 				<p class="subtitle">Undergraduate:</p>
 				<p class="intro"><span>Bachelor's degree:</span> University of Washington, Class of 2018</p>
 				<p class="intro"><span>Major:</span> Electrical Engineering (Minor: Philosophy)</p>
 				<p class="intro"><span>Concentration Area:</span> Digital Signal and Image Processing</p>
 				<br>
-				<p class="subtitle">Patents and Submissions:</p>
-				<p class="intro"><span>Patents:</span> Wind noise suppression method applicable to artificial cochlea, and system thereof (CN111261182B), Gain adjustment method suitable for cochlear implant (CN111479204B)</p>
-				<p class="intro"><span>Presentation:</span> Ong, T., <b>Tsai, Y.</b>, &amp; Nie, K. (2019). A real-time noise reduction algorithm by estimating speech gap for cochlear implant. Poster presented at the Conference on Implantable Auditory Prostheses, Lake Tahoe, CA</p>
-				<p class="intro"><span>Paper to submit:</span> Favaro, A., <b>Tsai, Y.</b> (2023) Are Interpretable Features More Suitable than Non-interpretable Features for the Automatic Detection of Parkinson’s Disease from Speech in Cross-lingual Scenarios?</p>
+				<p class="subtitle">Patent and Submissions:</p>
+				<p class="intro"><span>Patent:</span> Wind noise suppression method applicable to artificial cochlea, and system thereof (CN111261182B)</p>
+				<p class="intro"><span>Presentation:</span> <b>Tsai, Y.</b>, Ong, T., Nie, K. (2019). A real-time noise reduction algorithm by estimating speech gap for cochlear implant. Poster presented at the Conference on Implantable Auditory Prostheses, Lake Tahoe, CA</p>
+				<p class="intro"><span>Journal paper to submit:</span> Favaro, A., <b>Tsai, Y.</b>, Butalab, A., Thebauda, T., Villalba J., Dehak, N., Moro-Velazquez, L. (2023) Are Interpretable Features More Suitable than Non-interpretable Features for the Automatic Detection of Parkinson’s Disease from Speech in Cross-lingual Scenarios?</p>
 				<br>
-				<p class="subtitle">Contact:</p>
-				<p class="intro"><span>Email:</span> tsaiy4@uw.edu</p>
-				<p class="intro"><a href="https://www.linkedin.com/in/yi-ting-tsai" target="_blank">LinkedIn Profile</a></p>
+				<!-- <p class="subtitle">Contact:</p> -->
+				
 				<br/>
 				<br/>
 				<hr/>
