Add in research projects
- add 1 research project description in home
- add 1 research project in JHU page

--- a/portfolioHome.html
+++ b/portfolioHome.html
@@ -31,8 +31,8 @@
 				<p class="intro"><span>Master's degree:</span> The Johns Hopkins University, gradudated in Dec. 2022</p>
 				<p class="intro"><span>Major:</span> Electrical and Computer Engineering</p>
 				<p class="intro"><span>Concentration Area:</span> <a href="https://www.clsp.jhu.edu/human-language-technology-masters/" target="_blank">Human Language Technology</a></p>
-				<p class="intro"><span>Research Project:</span> A Cross-lingual Evaluation of the Automatic Detection of Parkinson’s Disease
-					from Speech using X-Vectors and TRILLsson Representations</p>
+				<p class="intro"><span>Research Projects:</span> Speech and Machine Learning for Neurodegenerative Disease Analysis; A Cross-lingual Evaluation of the Automatic Detection 
+					of Parkinson’s Disease from Speech using X-Vectors and TRILLsson Representations</p>
 				<br>
 				<p class="subtitle">Undergraduate:</p>
 				<p class="intro"><span>Bachelor's degree:</span> University of Washington, Class of 2018</p>
