Update paper info

--- a/portfolioHome.html
+++ b/portfolioHome.html
@@ -42,7 +42,7 @@
 				<p class="subtitle">Patent and Submissions:</p>
 				<p class="intro"><span>Patent:</span> Wind noise suppression method applicable to artificial cochlea, and system thereof (CN111261182B)</p>
 				<p class="intro"><span>Presentation:</span> <b>Tsai, Y.</b>, Ong, T., Nie, K. (2019). A real-time noise reduction algorithm by estimating speech gap for cochlear implant. Poster presented at the Conference on Implantable Auditory Prostheses, Lake Tahoe, CA</p>
-				<p class="intro"><span>Journal paper to submit:</span> Favaro, A., <b>Tsai, Y.</b>, Butalab, A., Thebauda, T., Villalba J., Dehak, N., Moro-Velazquez, L. (2023) Are Interpretable Features More Suitable than Non-interpretable Features for the Automatic Detection of Parkinson’s Disease from Speech in Cross-lingual Scenarios?</p>
+				<p class="intro"><span>Journal paper:</span> Favaro, A., <b>Tsai, Y.</b>, Butala, A., Thebaud, T., Villalba, J., Dehak, N., Moro-Velázquez, L. (2023). <a href="https://authors.elsevier.com/sd/article/S0010-4825(23)01024-7" target="_blank">Interpretable speech features vs. DNN embeddings: What to use in the automatic assessment of Parkinson’s disease in multi-lingual scenarios.</a> Computers in Biology and Medicine. 166: 107559.</p>
 				<br>
 				<!-- <p class="subtitle">Contact:</p> -->
 				
