Update patents and works

--- a/portfolioHome.html
+++ b/portfolioHome.html
@@ -25,6 +25,7 @@
 				<p class="intro"><span>Name:</span> Yi-Ting Tsai</p>
 				<p class="intro"><span>Languages:</span> English, Mandarin</p>
 				<p class="intro"><span>Email:</span> ytsai25@jhu.edu</p>
+				<p class="intro">I'm currently working as a DSP software engineer at Bose Professional, primarily focusing on machine learning in audio applications.</p>
 				<p class="intro"><a href="https://www.linkedin.com/in/yi-ting-tsai" target="_blank">LinkedIn Profile</a></p>
 				<br>
 				<p class="subtitle">Graduate School:</p>
@@ -39,10 +40,13 @@
 				<p class="intro"><span>Major:</span> Electrical Engineering (Minor: Philosophy)</p>
 				<p class="intro"><span>Concentration Area:</span> Digital Signal and Image Processing</p>
 				<br>
-				<p class="subtitle">Patent and Works:</p>
-				<p class="intro"><span>Patent:</span> Wind noise suppression method applicable to artificial cochlea, and system thereof (CN111261182B)</p>
-				<p class="intro"><span>Presentation:</span> <b>Tsai, Y.</b>, Ong, T., Nie, K. (2019). A real-time noise reduction algorithm by estimating speech gap for cochlear implant. Poster presented at the Conference on Implantable Auditory Prostheses, Lake Tahoe, CA</p>
-				<p class="intro"><span>Journal paper:</span> Favaro, A., <b>Tsai, Y.</b>, Butala, A., Thebaud, T., Villalba, J., Dehak, N., Moro-Velázquez, L. (2023). <a href="https://authors.elsevier.com/sd/article/S0010-4825(23)01024-7" target="_blank">Interpretable speech features vs. DNN embeddings: What to use in the automatic assessment of Parkinson’s disease in multi-lingual scenarios.</a> Computers in Biology and Medicine. 166: 107559.</p>
+				<p class="subtitle">Patents and Works:</p>
+				<p class="intro"><span>Journal paper:</span> Favaro, A., Tsai, Y., Butala, A., Thebaud, T., Villalba, J., Dehak, N., Moro-Velázquez, L. (2023). <a href="https://authors.elsevier.com/sd/article/S0010-4825(23)01024-7" target="_blank">Interpretable speech features vs. DNN embeddings: What to use in the automatic assessment of Parkinson’s disease in multi-lingual scenarios.</a> Computers in Biology and Medicine. 166: 107559.</p>
+				<p class="intro"><span>Patent:</span> Tsai, Y., Lai, F., Guo, Y. (2023). Sound noise reduction algorithm and system thereof (CN111341337B).</p>
+				<p class="intro"><span>Patent:</span> Tsai, Y., Fan, W., Liu, X. (2021). Wind noise suppression method applicable to artificial cochlea, and system thereof (CN111261182B/WO2021223518A1).</p>
+				<p class="intro"><span>Patent:</span> Guo, Y., Lai, F., Tsai, Y., Fan, W., Liu, X. (2021). Gain adjustment method suitable for cochlear implant (CN111479204B).</p>
+				<p class="intro"><span>Presentation:</span> Tsai, Y., Ong, T., Nie, K. (2019). A real-time noise reduction algorithm by estimating speech gap for cochlear implant. Poster presented at the Conference on Implantable Auditory Prostheses, Lake Tahoe, CA</p>
+				
 				<br>
 				<!-- <p class="subtitle">Contact:</p> -->
 				
@@ -53,7 +57,7 @@
 			
 			<div id="pusher"></div> 
 		</div> 
-		<div id="footer"><p id="copyright">by Yi-Ting Tsai, 2023</p></div>
+		<div id="footer"><p id="copyright">by Yi-Ting Tsai, 2024</p></div>
 	</body>
 
 </html>
