--- a/portfolioHome.html
+++ b/portfolioHome.html
@@ -29,7 +29,7 @@
 				<p class="intro"><a href="https://www.linkedin.com/in/yi-ting-tsai" target="_blank">LinkedIn Profile</a></p>
 				<br>
 				<p class="subtitle">Graduate School:</p>
-				<p class="intro"><span>Master's degree:</span> The Johns Hopkins University, gradudated in Dec. 2022</p>
+				<p class="intro"><span>Master's degree:</span> The Johns Hopkins University, graduated in Dec. 2022</p>
 				<p class="intro"><span>Major:</span> Electrical and Computer Engineering</p>
 				<p class="intro"><span>Concentration Area:</span> <a href="https://www.clsp.jhu.edu/human-language-technology-masters/" target="_blank">Human Language Technology</a></p>
 				<p class="intro"><span>Research Projects:</span> Speech and Machine Learning for Neurodegenerative Disease Analysis; A Cross-lingual Evaluation of the Automatic Detection 
